--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^8.30.0"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "nodemon": "^2.0.20"
   }
